--- a/src/all.module.css
+++ b/src/all.module.css
@@ -1155,6 +1155,8 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 
 .OnlyMobile {display: none;}
 
+.ViewBasics .medium a {border: none; width: auto;}
+
 .SubMiniBanner { padding: 10px 10px; width: 100%; display: inline-block; margin: 10px auto; font-size: 15px !important; line-height: 1.3; text-align: left !important;}
 .SubMiniBanner b {font-size: 15px;}
 
@@ -1412,6 +1414,7 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
  .SetupActions {width: 100%;}
  .FinalizeSequenceBoxButtons .ActionAWeb3Button {display: inline-block; margin: 5px auto;}
 
+
  .SingleContentPage {max-width: 100%;}
 
  .ModalBoxBanner {width: 95%;padding: 10px;}
@@ -1437,6 +1440,8 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
  .medium .TradeMarketTokenAmount {width:180px}
  .NothingToSee {padding: 15px;}
  .NothingToSee h4 {font-size: 12px;}
+
+ .medium .TradeMarketTokenAmount {width: 170px;}
 
  .WrapBoxItem {width: 95% !important; margin: 0px auto;}
  .UnwrapBoxItem {width: 95% !important; margin: 10px auto;}
