--- a/src/all.module.css
+++ b/src/all.module.css
@@ -71,7 +71,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #fff;
     -webkit-transition: .4s;
     transition: .4s;
     border-radius: 34px;
@@ -230,6 +230,7 @@ input::-webkit-scrollbar {
     max-width:15em;
     height: 100%;
     z-index: 9999999;
+    box-shadow: -9px 0 20px rgba(89,102,122,.1);
     background-color: var(--background-color);
 }
 .Header .BlurHeader {
@@ -240,14 +241,14 @@ input::-webkit-scrollbar {
     width: 15em;
     max-width:15em;
     display: block;
+    box-shadow: -9px 0 20px rgba(89,102,122,.1);
 }
 .logoMain img {
-    max-width:15em;
-    max-height:10em;
-    padding: 2em;
+    max-width: 15em;
+    padding: 9px 10px 10px 10px;
     display: block;
-    width: auto;
-    height: auto;
+    width: 80%;
+    margin: 0 auto;
 }
 .Navigation {
     display: block;
@@ -1326,15 +1327,16 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .ThemeSelect {width: 60px; display: inline-block; text-align: left;}
 .ThemeSelect select {padding: 10px 10px; border-radius: 12px; text-align: center; border: none;}
 
-.NetworkSelect {width: 120px; display: inline-block; text-align: left; margin: 10px auto 0px 15px;border-radius: 12px;}
+.NetworkSelect {width: 120px; display: inline-block; text-align: left; margin: 10px 30px 0px 15px;border-radius: 12px;}
 .NetworkSelectL1 {border-radius: 8px 0px 0px 8px; opacity: 0.7;}
 .NetworkSelectL2 {border-radius: 0px 8px 8px 0px; opacity: 0.7;}
 .NetworkSelect a {padding: 7px 4px; text-align: center; border: none; width: 60px; display: inline-block;}
 .NetworkSelect img {width:20px; height:20px;display: inline-block; margin: 3px 3px 3px 0px; vertical-align: middle;}
 .NetworkSelect p {display: inline-block; vertical-align: middle;font-size: 12px; font-weight: bold; max-width: 40px; overflow: hidden; margin-left: 2px;}
 
-.RightMenu {width: auto; text-align: right; display: inline-block;position: fixed; right: 0px; top: 0px; padding-top: 0px; padding-right: 10px; padding-bottom: 10px; z-index: 9999999; border-radius:0px 0px 0px 12px;-webkit-backdrop-filter: blur(6px);backdrop-filter: blur(6px);}
-
+.RightMenu {width: auto; text-align: right; display: flex;position: fixed; right: 0px; top: 0px; padding-top: 0px; padding-right: 10px; padding-bottom: 0px; z-index: 9999999; border-radius:0px 0px 0px 12px;-webkit-backdrop-filter: blur(6px);backdrop-filter: blur(6px);}
+.RightMenu>div {justify-items: flex-end;
+    display: flex;}
 .ObjectsLists {width: 100%; display: inline-block;}
 .TokenObject {width: 100%; height: 100px; display: inline-block; padding: 0px 0px 0px 0px; text-align: center;vertical-align: top; border: 0px solid; border-radius: 20px; overflow: hidden; cursor: pointer; margin: 5px auto;}
 .TokenObject figure {width: 100px; height: 100px; display: inline-block;}
@@ -2839,7 +2841,7 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .biz .Web3ConnectChain {background-color: #E4E4E4;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
 .dark .Web3ConnectChain {background-color: #525252;box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);}
 
-.light .Web3ConnectWallet {background-color: var(--background-color);}
+.light .Web3ConnectWallet {background-color: #e0d5f6; padding: 2px 2px 2px 3px;}
 .biz .Web3ConnectWallet {background: linear-gradient(0deg, #8DB1FA 80%, #ffffff 100%);border: 4px solid;border-color: #8DB1FA;border-radius: 20px !important; font-size: 12px;}
 .dark .Web3ConnectWallet {background-color: #525252;}
 .sepia .Web3ConnectWallet {background-color: #eee8d587;}
@@ -2938,7 +2940,13 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .dark .NetworkSelect p {color: #ffffff}
 .sepia .NetworkSelect p {color: #ffffff}
 
-.light .RightMenu {background-color: var(--lavender)}
+.light .RightMenu {    width: 100%;
+    background: #fff;
+    text-align: right;
+    display: flex;
+    place-content: flex-end;
+    box-shadow: -9px 0 20px rgba(89,102,122,.1);
+    z-index: 10000;}
 .biz .RightMenu {background-color: #8cd4d17a;border-radius:0px 0px 0px 12px !important;}
 .dark .RightMenu {background-color: #1a1a1a80;}
 .sepia .RightMenu {background-color: #fdf6e37d;}
