--- a/src/all.module.css
+++ b/src/all.module.css
@@ -146,7 +146,7 @@ input::-webkit-scrollbar {
 }
 
 .light {
-    background-color: var(--lavender);
+    background: linear-gradient(150deg, rgba(181,179,251,1) 0%, rgba(228,213,240,1) 60%, rgba(244,230,255,1) 100%);
 }
 
 
@@ -242,6 +242,7 @@ input::-webkit-scrollbar {
     max-width:15em;
     display: block;
     box-shadow: -9px 0 20px rgba(89,102,122,.1);
+    background: #000;
 }
 .logoMain img {
     max-width: 15em;
@@ -1197,7 +1198,19 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .AMMSelector label a {width: 80px; height: 80px; display: inline-block;}
 .AMMSelector label a img {width: 80px; height: 80px; display: inline-block;}
 .AMMSelector label a span {font-size: 13px; font-weight: bold;}
-
+.CopyRight{
+    font-size: 10px;
+    color: #777!important;
+    padding: 20px;
+    position: absolute;
+    bottom: 10px;
+    background: #f8f8f8;
+    margin: 10%;
+    width: 80%;
+    margin-bottom: 0px;
+    border-radius: 8px;
+    padding: 12px;
+}
 .ProposalOpen h6 {font-size: 15px;width: 100%; display: inline-block; margin: 10px auto; text-align: left; padding: 2px 30px;}
 
 .Options {width: 60px; display: inline-block; vertical-align: middle;}
@@ -1324,12 +1337,14 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .Web3ConnectWallet img {width:30px; height:30px; border-radius: 10px; display: inline-block; margin: 3px 3px 3px 3px; vertical-align: middle;object-fit: contain;}
 .Web3ConnectWallet p {display: inline-block; vertical-align: middle;font-size: 12px; font-weight: bold; max-width: 135px; overflow: hidden; margin-left: 5px;}
 
-.ThemeSelect {width: 60px; display: inline-block; text-align: left;}
-.ThemeSelect select {padding: 10px 10px; border-radius: 12px; text-align: center; border: none;}
+.ThemeSelect {width: 60px; display: inline-block; text-align: left; width: 100px;
+    margin-left: 240px;
+    margin-right: auto;}
+.ThemeSelect select {padding: 10px 10px; border-radius: 12px; text-align: center; border: none; }
 
-.NetworkSelect {width: 120px; display: inline-block; text-align: left; margin: 10px 30px 0px 15px;border-radius: 12px;}
-.NetworkSelectL1 {border-radius: 8px 0px 0px 8px; opacity: 0.7;}
-.NetworkSelectL2 {border-radius: 0px 8px 8px 0px; opacity: 0.7;}
+.NetworkSelect {width: 120px; display: inline-block; text-align: left; margin: 10px 0px 0px 15px;border-radius: 12px;}
+.NetworkSelectL1 {border-radius: 6px 0px 0px 6px; opacity: 0.7;}
+.NetworkSelectL2 {border-radius: 0px 6px 6px 0px; opacity: 0.7;}
 .NetworkSelect a {padding: 7px 4px; text-align: center; border: none; width: 60px; display: inline-block;}
 .NetworkSelect img {width:20px; height:20px;display: inline-block; margin: 3px 3px 3px 0px; vertical-align: middle;}
 .NetworkSelect p {display: inline-block; vertical-align: middle;font-size: 12px; font-weight: bold; max-width: 40px; overflow: hidden; margin-left: 2px;}
@@ -2832,7 +2847,7 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .sepia .ThemeSelect select {background-color: #eee8d587;}
 .matrix .ThemeSelect select {background-color: transparent; border: 1px solid #008F11; color: #008F11; border-radius: 0;}
 
-.light .NavigationItem {background-color: #ffffff;}
+.light .NavigationItem {background-color: #efedf3;}
 .biz .NavigationItem {background-color: #ffffff; border: 4px solid #ffffff; border-radius: 10px !important;}
 .dark .NavigationItem {background-color: #000000;}
 .sepia .NavigationItem {background-color: #D9D2C2;}
@@ -2841,7 +2856,7 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .biz .Web3ConnectChain {background-color: #E4E4E4;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
 .dark .Web3ConnectChain {background-color: #525252;box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);}
 
-.light .Web3ConnectWallet {background-color: #e0d5f6; padding: 2px 2px 2px 3px;}
+.light .Web3ConnectWallet {background-color: #e0d5f6; padding: 2px 2px 2px 3px; border-radius: 6px;}
 .biz .Web3ConnectWallet {background: linear-gradient(0deg, #8DB1FA 80%, #ffffff 100%);border: 4px solid;border-color: #8DB1FA;border-radius: 20px !important; font-size: 12px;}
 .dark .Web3ConnectWallet {background-color: #525252;}
 .sepia .Web3ConnectWallet {background-color: #eee8d587;}
