--- a/src/all.module.css
+++ b/src/all.module.css
@@ -316,15 +316,15 @@ input::-webkit-scrollbar {
 
 /* Home Cards */
 .CardsLayerS .CardsFancy {
-    background-color: var(--background-color);
-    box-shadow: 0 -4px 10px rgba(0, 0, 0, .05);
+    
     border-radius: 12px;
-    width: 200px;
+    width: 270px;
     height: 200px;
     display: inline-block;
     margin: 10px;
     text-align: center;
     vertical-align: middle;
+    position: relative;
 }
 .CardsLayerS figure {width: 60px; height: 60px; display: inline-block; margin: 50px auto 30px auto;}
 .CardsLayerS figure img {width: 60px; display: inline-block;}
@@ -1210,6 +1210,32 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
     margin-bottom: 0px;
     border-radius: 8px;
     padding: 12px;
+}
+.CardsLayerHeader{
+    background-color: #efdaff;
+    border-radius: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-self: stretch;
+    align-items: center;
+    padding-top: 0px;
+    padding-bottom: 100px;
+    display: flex;
+}
+.CardsLayerBody{
+    width: 250px;
+    height: auto;
+    background-color: #fff;
+    border-radius: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 30px 15px 20px;
+    position: absolute;
+    top: 175px;
+    box-shadow: 0 -4px 10px rgba(0, 0, 0, .15);
+    font-weight: normal!important;
+    font-size: 14px!important;
+    line-height: 18px;
 }
 .ProposalOpen h6 {font-size: 15px;width: 100%; display: inline-block; margin: 10px auto; text-align: left; padding: 2px 30px;}
 
