--- a/src/all.module.css
+++ b/src/all.module.css
@@ -1237,6 +1237,20 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
     font-size: 14px!important;
     line-height: 18px;
 }
+.NavigationHeader{
+    color: #000000;
+    text-align: left;
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.NavigationHeader span{
+    font-size: 10px;
+    color: #888;
+}
+.CardsLayerS .CardsFancy:last-child img{
+    width:50px!important;
+}
 .ProposalOpen h6 {font-size: 15px;width: 100%; display: inline-block; margin: 10px auto; text-align: left; padding: 2px 30px;}
 
 .Options {width: 60px; display: inline-block; vertical-align: middle;}
