--- a/src/all.module.css
+++ b/src/all.module.css
@@ -26,8 +26,6 @@ a {
     background-color: var(--background-color);
 }
 
-@import "";
-
 body {
     font-family: "EthOSregular", "Overpass Mono", monospace !important;
 }
@@ -50,7 +48,7 @@ body {
 }
 
 /* Toggle switch */
-.switch {
+.ThemeSwitch {
     position: relative;
     display: inline-block;
     width: 60px;
@@ -58,13 +56,13 @@ body {
     margin: auto;
 }
 
-.switch input {
+.ThemeSwitch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
 
-.slider {
+.ThemeSlider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -74,11 +72,11 @@ body {
     background-color: #fff;
     -webkit-transition: .4s;
     transition: .4s;
-    border-radius: 34px;
+    border-radius: 6px;
     border: 1px solid var(--btn-background-primary);
 }
 
-.slider:before {
+.ThemeSlider:before {
     position: absolute;
     content: "";
     height: 26px;
@@ -89,18 +87,18 @@ body {
     background-color: var(--btn-background-primary);
     -webkit-transition: .4s;
     transition: .4s;
-    border-radius: 50%;
+    border-radius: 20%;
 }
 
-input:checked + .slider {
-    background-color: white;
+input:checked + .ThemeSlider {
+    background-color: #fff;
 }
 
-input:focus + .slider {
+input:focus + .ThemeSlider {
     box-shadow: 0 0 1px var(--btn-background-primary);
 }
 
-input:checked + .slider:before {
+input:checked + .ThemeSlider:before {
     -webkit-transform: translateX(24px);
     -ms-transform: translateX(24px);
     transform: translateX(24px);
@@ -135,8 +133,6 @@ input:checked + .slider:before {
 
 .light::-webkit-scrollbar,
 .dark::-webkit-scrollbar,
-.biz::-webkit-scrollbar,
-.sepia::-webkit-scrollbar,
 div::-webkit-scrollbar,
 span::-webkit-scrollbar,
 p::-webkit-scrollbar,
@@ -147,6 +143,10 @@ input::-webkit-scrollbar {
 
 .light {
     background: linear-gradient(150deg, rgba(181,179,251,1) 0%, rgba(228,213,240,1) 60%, rgba(244,230,255,1) 100%);
+}
+
+.dark {
+    background: linear-gradient(150deg, rgba(32,18,43,1) 0%, rgba(15,8,43,1) 60%, rgba(14,14,14,1) 100%);
 }
 
 
@@ -230,8 +230,14 @@ input::-webkit-scrollbar {
     max-width:15em;
     height: 100%;
     z-index: 9999999;
+}
+.light .Header .FixedHeader  {
     box-shadow: -9px 0 20px rgba(89,102,122,.1);
     background-color: var(--background-color);
+}
+.dark .Header .FixedHeader  {
+    box-shadow: -9px 0 20px rgba(255, 255, 255, 0.1);
+    background-color: #000;
 }
 .Header .BlurHeader {
     display: none;
@@ -241,8 +247,13 @@ input::-webkit-scrollbar {
     width: 15em;
     max-width:15em;
     display: block;
-    box-shadow: -9px 0 20px rgba(89,102,122,.1);
     background: #000;
+}
+.light .logoMain {
+    box-shadow: -9px 0 20px rgba(89,102,122,.1);
+}
+.dark .logoMain {
+    box-shadow: -9px 0 20px rgba(255, 255, 255, 0.1);
 }
 .logoMain img {
     max-width: 15em;
@@ -316,7 +327,7 @@ input::-webkit-scrollbar {
 
 /* Home Cards */
 .CardsLayerS .CardsFancy {
-    
+
     border-radius: 12px;
     width: 270px;
     height: 200px;
@@ -1200,16 +1211,22 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .AMMSelector label a span {font-size: 13px; font-weight: bold;}
 .CopyRight{
     font-size: 10px;
-    color: #777!important;
     padding: 20px;
     position: absolute;
     bottom: 10px;
-    background: #f8f8f8;
     margin: 10%;
     width: 80%;
     margin-bottom: 0px;
     border-radius: 8px;
     padding: 12px;
+}
+.light .CopyRight{
+    color: #777!important;
+    background: #f8f8f8;
+}
+.dark .CopyRight{
+    color: #f8f8f8!important;
+    background: #0F082B;
 }
 .CardsLayerHeader{
     background-color: #efdaff;
@@ -1252,14 +1269,26 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
     width:50px!important;
 }
 .MenuProfile{
-    margin:10px;
+    margin:0px 0px 20px 0px;
+    padding: 25px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 6px;
+}
+.light .MenuProfile {
+    background-color: #e0d5f6;
+}
+.dark .MenuProfile {
+    background-color: #20122b;
 }
 
 .MenuProfile img{
     border-radius: 6px;
 }
 .MenuProfile h3{
- font-size: 16px;
+    font-size: 16px;
 }
 
 
@@ -1401,9 +1430,35 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .NetworkSelect img {width:20px; height:20px;display: inline-block; margin: 3px 3px 3px 0px; vertical-align: middle;}
 .NetworkSelect p {display: inline-block; vertical-align: middle;font-size: 12px; font-weight: bold; max-width: 40px; overflow: hidden; margin-left: 2px;}
 
-.RightMenu {width: auto; text-align: right; display: flex;position: fixed; right: 0px; top: 0px; padding-top: 0px; padding-right: 10px; padding-bottom: 0px; z-index: 9999999; border-radius:0px 0px 0px 12px;-webkit-backdrop-filter: blur(6px);backdrop-filter: blur(6px);}
-.RightMenu>div {justify-items: flex-end;
-    display: flex;}
+.RightMenu {
+    width: 100%;
+    text-align: right;
+    display: flex;
+    position: fixed;
+    place-content: flex-end;
+    right: 0px;
+    top: 0px;
+    padding-top: 0px;
+    padding-right: 10px;
+    padding-bottom: 0px;
+    z-index: 10000;
+    border-radius:0px 0px 0px 12px;
+    -webkit-backdrop-filter: blur(6px);
+    backdrop-filter: blur(6px);
+}
+.light .RightMenu {
+    background: #fff;
+    box-shadow: -9px 0 20px rgba(89,102,122,.1);
+}
+.dark .RightMenu {
+    background: #000;
+    box-shadow: -9px 0 20px rgba(147, 152, 160, 0.1);
+}
+.RightMenu>div {
+    justify-items: flex-end;
+    display: flex;
+}
+
 .ObjectsLists {width: 100%; display: inline-block;}
 .TokenObject {width: 100%; height: 100px; display: inline-block; padding: 0px 0px 0px 0px; text-align: center;vertical-align: top; border: 0px solid; border-radius: 20px; overflow: hidden; cursor: pointer; margin: 5px auto;}
 .TokenObject figure {width: 100px; height: 100px; display: inline-block;}
@@ -1830,13 +1885,8 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 
 .biz a, .biz div,.biz figure, .biz input, .biz ul, .biz li, .biz nav, .biz select, .biz button, .biz span {border-radius: 20px !important;}
 
-.light, .dark, .biz, .sepia, .matrix {height: 100vh; overflow: scroll;}
+.light, .dark {height: 100vh; overflow: scroll;}
 
-
-.biz {background: rgb(255,255,255);background: linear-gradient(0deg, #ffffff 20%, #6EC9C6 100%);}
-.dark {background-color: #000000; background: linear-gradient(300deg, #1a1a1a 70%, rgba(120,111,255,1) 100%);}
-.matrix {background-color: #000000; background: linear-gradient(320deg, #000000 87%, #008F11 100%);}
-.sepia {background-color: #FDF6E3; background: linear-gradient(320deg, #FDF6E3 90%, #49646a 100%);}
 
 .light .medium {background-color: #ffffff;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
 .biz .medium {background-color: #ffffff;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
@@ -2905,40 +2955,20 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .sepia .NavigationItem {background-color: #D9D2C2;}
 
 .light .Web3ConnectChain {background-color: #E4E4E4;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
-.biz .Web3ConnectChain {background-color: #E4E4E4;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
 .dark .Web3ConnectChain {background-color: #525252;box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgb(0 0 0 / 32%);}
 
-.light .Web3ConnectWallet {background-color: #e0d5f6; padding: 2px 2px 2px 3px; border-radius: 6px;}
-.biz .Web3ConnectWallet {background: linear-gradient(0deg, #8DB1FA 80%, #ffffff 100%);border: 4px solid;border-color: #8DB1FA;border-radius: 20px !important; font-size: 12px;}
-.dark .Web3ConnectWallet {background-color: #525252;}
-.sepia .Web3ConnectWallet {background-color: #eee8d587;}
-.matrix .Web3ConnectWallet {background-color: transparent; border: 1px solid #008F11; color: #008F11;}
-
-.biz .Web3ConnectWallet p {font-size: 11px; color: #ffffff;}
-.biz .Web3ConnectWallet img {width: 20px; height: 20px;}
-
-.biz .Factories {background: linear-gradient(0deg, #ffffff 50%, hsl(212deg 30% 83%) 100%);}
-.biz .Items {background: linear-gradient(0deg, #ffffff 50%, #bfc0ea 100%);}
-.biz .Organizations {background: linear-gradient(0deg, #ffffff 50%, #99e9da 100%);}
-.biz .Covenants {background: linear-gradient(0deg, #ffffff 50%, #eccfd9 100%);}
+.Web3ConnectWallet {padding: 2px 2px 2px 3px; border-radius: 6px;}
+.light .Web3ConnectWallet {background-color: #e0d5f6;}
+.dark .Web3ConnectWallet {background-color: #20122b;}
 
 .light input[type=range] {background-color: transparent;}
-.biz input[type=range] {background-color: transparent;}
 .dark input[type=range] {background-color: transparent;}
-.sepia input[type=range] {background-color: transparent;}
-.matrix input[type=range] {background-color: transparent;}
 
 .light input[type=range]::-webkit-slider-runnable-track {border: 0px solid #000000;box-shadow: 0px 0px 0px #50555C; background: #ffffff;}
-.biz input[type=range]::-webkit-slider-runnable-track {border: 0px solid #000000;box-shadow: 0px 0px 0px #50555C; background: linear-gradient(0deg, #ffffff 50%, #bfc0ea 100%);}
 .dark input[type=range]::-webkit-slider-runnable-track {border: 0px solid #ffffff;box-shadow: 0px 0px 0px #50555C; background: #50555C;}
-.sepia input[type=range]::-webkit-slider-runnable-track {border: 0px solid #000000;box-shadow: 0px 0px 0px #50555C; background: #ffffff;}
-.matrix input[type=range]::-webkit-slider-runnable-track {border: 0px solid #000000;box-shadow: 0px 0px 0px #50555C; background: #008F11;border-radius: 0;}
 
 .light input[type=range]::-webkit-slider-thumb {background: #7474F7;box-shadow: 0px 0px 0px #000000;border: 0px solid #000000;}
-.biz input[type=range]::-webkit-slider-thumb {background: linear-gradient(0deg, #849bbd 50%, #ffffff 100%);box-shadow: 0px 0px 0px #000000;border: 0px solid #000000;}
 .dark input[type=range]::-webkit-slider-thumb {background: #7474F7;box-shadow: 0px 0px 0px #ffffff;border: 0px solid #d9d2c2a3;}
-.sepia input[type=range]::-webkit-slider-thumb {background: #49646a;box-shadow: 0px 0px 0px #ffffff;border: 0px solid #49646a;}
-.matrix input[type=range]::-webkit-slider-thumb {background: #000000;box-shadow: 0px 0px 0px #ffffff;border: 0px solid #49646a; border-radius: 0;}
 
 .light input[type=range]:focus::-webkit-slider-runnable-track {background: #ffffff;}
 .biz input[type=range]:focus::-webkit-slider-runnable-track {background: linear-gradient(0deg, #ffffff 50%, #bfc0ea 100%);}
@@ -3006,18 +3036,6 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .biz .NetworkSelect p {color: #ffffff}
 .dark .NetworkSelect p {color: #ffffff}
 .sepia .NetworkSelect p {color: #ffffff}
-
-.light .RightMenu {    width: 100%;
-    background: #fff;
-    text-align: right;
-    display: flex;
-    place-content: flex-end;
-    box-shadow: -9px 0 20px rgba(89,102,122,.1);
-    z-index: 10000;}
-.biz .RightMenu {background-color: #8cd4d17a;border-radius:0px 0px 0px 12px !important;}
-.dark .RightMenu {background-color: #1a1a1a80;}
-.sepia .RightMenu {background-color: #fdf6e37d;}
-.matrix .RightMenu {background-color: #000; border-radius: 0; backdrop-filter: blur(0px);}
 
 .light .ObjectInfoAndLink h5 {color: #000000 !important;}
 .biz .ObjectInfoAndLink h5 {color: #000000 !important;}
