--- a/src/components/Global/MainTemplate/main-template.module.css
+++ b/src/components/Global/MainTemplate/main-template.module.css
@@ -32,7 +32,7 @@
   min-height: 300px;
   width: 80%;
   min-width: 950px;
-  margin: 0 0 0 2%;
+  margin: 0 0 0 0;
   display: inline-block;
   text-align: center;
 }
