--- a/src/components/Global/MainTemplate/main-template.module.css
+++ b/src/components/Global/MainTemplate/main-template.module.css
@@ -5,7 +5,8 @@
   margin: 0  auto 0 auto;
   display: block;
   text-align: center;
-  padding-top: 40px;
+  padding-top: 60px;
+  padding-left: 15em;
 }
 .OnlyMobile {display: none;}
 
