--- a/src/components/Global/MainTemplate/main-template.module.css
+++ b/src/components/Global/MainTemplate/main-template.module.css
@@ -54,8 +54,8 @@
 
 .BackgroundBodyImage{
   position: fixed;
-  bottom: -200px;
-  right: -200px;
-  z-index:0;
-  opacity: 0.1;
+    bottom: -380px;
+    left: -150px;
+    z-index: 0;
+    opacity: 0.1;
 }
