--- a/src/all.module.css
+++ b/src/all.module.css
@@ -311,6 +311,7 @@ input::-webkit-scrollbar {
 }
 .light .logoMain {
     box-shadow: -9px 0 20px rgba(89,102,122,.1);
+    background: #f9fbfb;
 }
 .dark .logoMain {
     box-shadow: -9px 0 20px rgba(255, 255, 255, 0.1);
